fix: use a transform for the clickable isngalizer for better alignment

--- a/packages/grapes/src/General/ClickableSignalizer/ClickableSignalizer.scss
+++ b/packages/grapes/src/General/ClickableSignalizer/ClickableSignalizer.scss
@@ -7,9 +7,9 @@
 
   & > .clickable-signalizer {
     position: absolute;
-    left: calc(3.5px - 50%);
-    top: calc(3.5px - 50%);
-    // transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 
     z-index: 1;
 
